feat: core function

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,18 @@
     <title>PCFL</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <form class="main-layout" enctype="multipart/form-data" action="/result" method="post" onSubmit="return submitEvent()">
+        <h1>PCFL</h1>
+        <br>
+        <div class="mb-3">
+            <label for="midiFile" class="form-label">교정할 미디 파일을 업로드 해 주세요</label>
+            <input class="form-control" type="file" id="midiFile" name="midiFile" accept=".midi, .mid">
+            <br>
+            <button id="submitBtn" type="submit" class="btn btn-dark" style="float: right">교정하기</button>
+        </div>
+    </form>
 
     {% include 'includes/foot.html' %}
+    <script src="{{ url_for('static', filename='js/index.js') }}" type="text/javascript"></script>
 </body>
 </html>
